--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,20 @@
-{}
+{
+  "hosting": {
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      //{
+      //  "source": "**",
+      //  "destination": "/index.html"
+      //},
+      {
+        "source": "**",
+        "function": "app"
+      }
+    ]
+  }
+}
