--- a/functions/package.json
+++ b/functions/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "codelab-level-one",
-  "description": "Actions on Google Codelab Level 1",
-  "author": "Google Inc",
-  "private": true,
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "lint": "eslint .",
     "serve": "firebase serve --only functions",
-    "shell": "firebase experimental:functions:shell",
+    "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
   "dependencies": {
     "actions-on-google": "^2.0.0",
-    "firebase-admin": "^5.12.0",
-    "firebase-functions": "^2.0.5"
-  },
-  "devDependencies": {
-    "eslint": "^4.19.0",
-    "eslint-config-google": "^0.9.1"
+    "express": "^4.16.4",
+    "firebase-admin": "~6.0.0",
+    "firebase-functions": "^2.0.3"
   }
 }
